ISSUE-1547 Add native support for retried tests